# zeroclaw

./: .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.debian  plan.md
.github/workflows/: cross-platform-build-manual.yml  docker-build.yml
api/: src-files.js
api/fill_translations/: all.html  enum.LeakCheck.html  fn.check_for_leak.html  fn.chrono_now.html  fn.commit_entry.html  fn.decode_po_string.html  fn.encode_po_string.html  fn.fail.html  fn.fetch_ollama_content.html  fn.main.html  fn.parse_po.html  fn.read_model_provider_config.html  fn.translate_batch.html  fn.write_po.html  index.html  struct.Args.html  struct.BatchFailure.html  struct.Entry.html  struct.FailureLog.html  struct.ProviderConfig.html  type.BatchResult.html
api/fluent/: all.html  enum.Cmd.html  (+3 more)
crates/zeroclaw-log/: Cargo.toml
crates/zeroclaw-log/src/: broadcast.rs  chain.rs  config.rs  event.rs  lib.rs  macro.rs  migrate.rs  reader.rs  tool_io.rs  writer.rs
en/: 404.html  api.html  index.html  philosophy.html  print.html  searcher-c2a407aa.js  toc-d945f4c0.js  toc.html
es/: 404.html  api.html  index.html  philosophy.html  print.html  searcher-c2a407aa.js  toc-e0531449.js  toc.html
fr/: 404.html  api.html  introduction.html  philosophy.html  print.html  searcher-c2a407aa.js  toc-1b3b72c6.js  toc.html
ja/: 404.html  api.html  introduction.html  philosophy.html  print.html  searcher-c2a407aa.js  toc-25322ecc.js  toc.html
src/: main.rs
zh-CN/: 404.html  api.html  introduction.html  philosophy.html  print.html  searcher-c2a407aa.js  toc-c1d9acc1.js  toc.html
(+6790 files in other folders)
