[package]
name = "zeroclaw-log"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified log emission surface: structured event schema, JSONL persistence, broadcast hook, and the record! macro every other crate emits through."
publish = false

[dependencies]
zeroclaw-api.workspace = true
zeroclaw-config = { workspace = true, default-features = true }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
parking_lot = "0.12"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false }
tokio = { version = "1.50", default-features = false, features = ["sync"] }
tracing = { version = "0.1", default-features = false }
uuid = { version = "1.18", default-features = false, features = ["v4", "std"] }

[dev-dependencies]
tempfile = "3.26"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
